# FuNmiRBench

./: .gitignore  README.md  benchmark.example.toml  benchmark.example.yaml  benchmark.py  benchmark.yaml  downstream_benchmark_flow.md  environment.yml  joined_001_mock.tsv  pyproject.toml  workflow.md
data/: README.md
data/experiments/processed/: GSE109725_edger_out_oe_hsa_miR_204_5p_525.tsv  GSE112859_edger_out_oe_hsa_miR_574_3p_oe_3p.tsv  GSE93717_edger_out_oe_hsa_miR_941.tsv  (+21 more)
data/joined/: 001_mock.tsv
data/plots/: 1_mock_score_vs_logFC.txt
data/predictions/: README.md
examples/dummy_benchmark/: README.md  benchmark.yaml
funmirbench/: __init__.py  benchmark.py  benchmark_config.py  benchmark_reports.py  build_cheating_predictions.py  build_perfect_predictions.py  build_predictions.py  common_predictions.py  comparison_plots.py  cross_dataset.py  dataset_reports.py  de_table.py  evaluate.py  evaluate_common.py  evaluate_plots.py  evaluate_reports.py  experiment_store.py  experiments_download_examples.py  experiments_pipeline.py  geo_download_examples.py  geo_pipeline.py  import_experiments.py  join.py  logger.py  predictor_combinations.py  publication_combinations.py  publication_dataset_reports.py  publication_plots.py  publication_reports.py  run_report.py  sync_metadata.py  validate_experiments.py
metadata/: README.md  datasets.json  index.json  mirna_experiment_info.tsv  predictions.json  predictions_info.tsv
pipelines/experiments/: environment.yml  run_deseq2.R  run_deseq2_counts.R
pipelines/geo/: README.md  environment.yml  fetch_geo_metadata.py  geo_download.py  run_deseq2.R  test_experiments.tsv
pipelines/standardized_predictors/: README.md  environment.yml
scripts/: audit_report_bundle.py  build_experiments_index.py  build_index.py  build_predictions.py  build_predictions_index.py
src/funmirbench/: __init__.py  datasets.py  de_table_validation.py
src/funmirbench.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  test_audit_report_bundle.py  test_benchmark.py  test_build_predictions.py  test_common_predictions.py  test_comparison_plots.py  test_datasets.py  test_de_table.py  test_evaluate.py  test_experiment_store.py  test_experiments_download_examples.py  test_experiments_pipeline.py  test_gene_id.py  test_geo_download_examples.py  test_geo_pipeline.py  test_join.py  test_paths.py  test_predictor_combinations.py  test_publication_combinations.py  test_publication_plots.py  test_run_benchmark.py  test_sync_metadata.py  test_targetscan_pipeline.py  test_validate_experiments.py
(+116 files in other folders)
