[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "funmirbench"
version = "0.0.0"
description = "Benchmarking framework for functional microRNA target prediction."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "BioGeMT Project Team" }
]
dependencies = [
  "pandas>=2.2,<3",
  "matplotlib>=3.9,<4",
  "requests>=2.32,<3",
  "scikit-learn>=1.5,<2",
  "rich>=13.7,<14",
  "pyfiglet>=1.0,<2",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
