[project]
name = "funmirbench"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2",
    "matplotlib>=3.9",
    "scikit-learn>=1.5",
    "pyyaml>=6",
    "requests>=2.32",
]

[project.scripts]
funmirbench = "funmirbench.benchmark:main"
funmirbench-geo = "funmirbench.geo_pipeline:main"
funmirbench-geo-download-examples = "funmirbench.geo_download_examples:main"
funmirbench-build-predictions = "funmirbench.build_predictions:main"
funmirbench-build-cheating-predictions = "funmirbench.build_cheating_predictions:main"
funmirbench-import-experiments = "funmirbench.import_experiments:main"
funmirbench-validate-experiments = "funmirbench.validate_experiments:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
