[project]
name = "funmirbench"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2",
    "matplotlib>=3.9",
    "scikit-learn>=1.5",
    "pyyaml>=6",
    "requests>=2.32",
]

[project.scripts]
funmirbench = "funmirbench.benchmark:main"
funmirbench-experiments = "funmirbench.experiments_pipeline:main"
funmirbench-experiments-download-examples = "funmirbench.experiments_download_examples:main"
funmirbench-sync-metadata = "funmirbench.sync_metadata:main"
funmirbench-build-predictions = "funmirbench.build_predictions:main"
funmirbench-build-cheating-predictions = "funmirbench.build_cheating_predictions:main"
funmirbench-validate-experiments = "funmirbench.validate_experiments:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
